prevent horizontal scrolling

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -1,6 +1,7 @@
 html {
   position: relative;
   left: 25em;
+  overflow-x: hidden;
 }
 
 ul {
