--- a/client/styles/nav.css
+++ b/client/styles/nav.css
@@ -3,7 +3,7 @@ nav {
   width: 350px;
   left: 0em;
   top: 0em;
-  height: 98vh;
+  height: 100vh;
   background-color: #000;
   color: #fff;
   padding: 0em 1em;
